tests/error/fail_assign.gw
#! [contains] not allowed
class C extends Event{}
Event e @=> C o;
